--- a/index.html
+++ b/index.html
@@ -4,36 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lilarando</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./standart.css">
+    <link rel="stylesheet" href="./style/standart.css">
+    <link rel="stylesheet" href="./style/style.css">
 
-    <script src="./script.js"></script>
+    <script src="./script/script.js"></script>
 
 </head>
 <body>
-
-      <header>
   <header>
     <h1>Lilarando</h1>
   </header>
+    <main>
 
-  <main class="container">
-    
-    <section class="menu">
-      <h2>Speisekarte</h2>
-      <ul id="menulist"></ul>
-    </section>
-
-    <aside class="cart">
-      <h2>Warenkorb</h2>
-      <ul id="cartlist"></ul>
-      <div class="cartfooter">
-        <strong>Gesamt: <span id="carttotal">0</span> €</strong>
-        <button id="checkoutbutton">Bestellen ✅</button>
-      </div>
-    </aside>
-  </main>
-  </main>
-    
+    </main>
 </body>
 </html>
