--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lilarando</title>
+    <title>Floky´s Burgerbude</title>
     <link rel="stylesheet" href="./style/standart.css">
     <link rel="stylesheet" href="./style/style.css">
 
     <script src="./script/script.js"></script>
-
+    <script src="./script/template.js"></script>
+    <script src="./script/burgers.json"></script>
 </head>
 <body>
   <header>
-    <h1>Lilarando</h1>
+    <h1>Floky´s Burgerbude</h1>
   </header>
     <main>
+      <section id="menu" class="menu">
 
+      </section>
+      <section id="shopingCard" class="shopingCard">
+
+      </section>
     </main>
 </body>
 </html>
