Neuanfang with Emilsupport

--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floky´s Burgerbude</title>
-    <link rel="stylesheet" href="./style/standart.css">
-    <link rel="stylesheet" href="./style/style.css">
 
-    <script src="./script/script.js"></script>
-    <script src="./script/template.js"></script>
-    <script src="./script/burgers.json"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Floky´s Burgerbude</title>
+  <link rel="stylesheet" href="./style/standart.css">
+  <link rel="stylesheet" href="./style/style.css">
+
 </head>
+
 <body>
   <header>
     <h1>Floky´s Burgerbude</h1>
   </header>
-    <main>
-      <section id="menu" class="menu">
+  <main>
+    <section id="menu" class="menu">
 
-      </section>
-      <section id="shopingCard" class="shopingCard">
+    </section>
+    <section id="shopingCard" class="shopingCard">
 
-      </section>
-    </main>
+    </section>
+  </main>
 </body>
+
+<script src="./script/burgers.js"></script>
+<script src="./script/script.js"></script>
+<script src="./script/template.js"></script>
+
 </html>
