template function erstellt

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./style/standart.css">
   <link rel="stylesheet" href="./style/style.css">
 
+  <script src="./script/burgers.js"defer></script>
+  <script src="./script/script.js"defer></script>
+  <script src="./script/template.js"defer></script>
 </head>
 
 <body>
@@ -24,8 +27,6 @@
   </main>
 </body>
 
-<script src="./script/burgers.js"></script>
-<script src="./script/script.js"></script>
-<script src="./script/template.js"></script>
+
 
 </html>
